add RELEASE_NOTES, update README (sync both with branches/2.1) and add hack to include them in assemblies
git-svn-id: https://svn.apache.org/repos/asf/geronimo/server/trunk@679163 13f79535-47bb-0310-9956-ffa450edef68